# tim2tox

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  DHT_DISCOVERY_INVESTIGATION.md  LICENSE  README.en.md  README.md  README_BUILD.md  RUNNING_FLAG_ANALYSIS.md  build.sh  build_ffi.sh  tim2tox.code-workspace
auto_tests/: DEBUG_NATIVE_CRASH.md  FAILURE_RECORDS.md  README.md  check_test_assertions.sh  full_log.txt  group_state_log.txt  merge_phase_results.sh  pubspec.yaml  run_all_tests.sh  run_conversation_test_with_lldb.sh  run_group_tests.sh  run_pin_test_with_lldb.sh  run_tests.sh  run_tests_ordered.sh  run_tests_verbose.sh  run_tests_with_lib.sh
auto_tests/test/: test_common_utils_mock.dart  test_fixtures.dart  test_helper.dart  test_library_path.dart  test_path_provider_mock.dart
auto_tests/test/scenarios/: scenario_avatar_test.dart  scenario_bootstrap_test.dart  scenario_conference_av_test.dart  scenario_conference_invite_merge_test.dart  scenario_conference_offline_test.dart  scenario_conference_peer_nick_test.dart  scenario_conference_query_test.dart  scenario_conference_simple_test.dart  scenario_conference_test.dart  scenario_conversation_callback_test.dart  scenario_conversation_callback_virtual_test.dart  scenario_conversation_pin_test.dart  scenario_conversation_test.dart  scenario_conversation_virtual_test.dart  scenario_dht_nodes_response_api_test.dart  scenario_events_test.dart  scenario_file_cancel_test.dart  scenario_file_seek_test.dart  scenario_file_transfer_test.dart  scenario_friend_connection_test.dart  scenario_friend_delete_test.dart  scenario_friend_query_test.dart  scenario_friend_read_receipt_test.dart  scenario_friend_request_simple_test.dart  scenario_friend_request_spam_test.dart  scenario_friend_request_test.dart  scenario_friendship_test.dart  scenario_group_create_debug_test.dart  scenario_group_double_invite_test.dart  scenario_group_error_test.dart  scenario_group_general_test.dart  scenario_group_info_modify_test.dart  scenario_group_invite_test.dart  scenario_group_large_test.dart  scenario_group_member_info_test.dart  scenario_group_message_test.dart  scenario_group_message_types_test.dart  scenario_group_moderation_test.dart  scenario_group_multi_test.dart  scenario_group_save_test.dart  (+32 more)
auto_tests/test/scenarios_binary/: scenario_custom_callback_handler_test.dart  scenario_library_loading_test.dart  (+1 more)
dart/: README.md  pubspec.yaml
dart/lib/: tim2tox_dart.dart
doc/: API_REFERENCE.en.md  API_REFERENCE.md  ARCHITECTURE.en.md  ARCHITECTURE.md  BINARY_REPLACEMENT.en.md  BINARY_REPLACEMENT.md  BOOTSTRAP_AND_POLLING.en.md  BOOTSTRAP_AND_POLLING.md  DEVELOPMENT_GUIDE.en.md  DEVELOPMENT_GUIDE.md  FFI_COMPAT_LAYER.en.md  FFI_COMPAT_LAYER.md  FFI_FUNCTION_DECLARATION_GUIDE.md  ISCUSTOMPLATFORM_ROUTING_IMPACT.en.md  ISCUSTOMPLATFORM_ROUTING_IMPACT.md  MODULARIZATION.en.md  MODULARIZATION.md  MULTI_INSTANCE_SUPPORT.en.md  MULTI_INSTANCE_SUPPORT.md  PLATFORM_VS_V2TIM_AND_CONVERSATION_LISTENER.md  README.en.md  README.md  RESTORE_AND_PERSISTENCE.en.md  RESTORE_AND_PERSISTENCE.md  TOXAV_AND_SIGNALING.en.md  TOXAV_AND_SIGNALING.md
doc/api/: API_REFERENCE.en.md  API_REFERENCE.md  API_REFERENCE_DART.en.md  API_REFERENCE_DART.md  API_REFERENCE_FFI.en.md  API_REFERENCE_FFI.md  API_REFERENCE_TEMPLATE.en.md  API_REFERENCE_TEMPLATE.md  API_REFERENCE_V2TIM.en.md  API_REFERENCE_V2TIM.md
doc/architecture/: ARCHITECTURE.en.md  ARCHITECTURE.md  BINARY_REPLACEMENT.en.md  BINARY_REPLACEMENT.md  FFI_COMPAT_LAYER.en.md  FFI_COMPAT_LAYER.md  MODULARIZATION.en.md  MODULARIZATION.md  PLATFORM_VS_V2TIM_AND_CONVERSATION_LISTENER.en.md
doc/development/: DEVELOPMENT_GUIDE.en.md  DEVELOPMENT_GUIDE.md  FFI_FUNCTION_DECLARATION_GUIDE.en.md  MULTI_INSTANCE_SUPPORT.en.md  MULTI_INSTANCE_SUPPORT.md
doc/integration/: BOOTSTRAP_AND_POLLING.en.md  BOOTSTRAP_AND_POLLING.md  INTEGRATION_OVERVIEW.en.md  INTEGRATION_OVERVIEW.md  RESTORE_AND_PERSISTENCE.en.md  RESTORE_AND_PERSISTENCE.md  TOXAV_AND_SIGNALING.en.md  TOXAV_AND_SIGNALING.md
doc/troubleshooting/: README.en.md  README.md  RUNNING_FLAG_ANALYSIS.md
example/: CLIENT_USAGE.md  CMakeLists.txt  README.md  build_examples.sh  echo_bot_client.cpp  echo_bot_server.cpp  test_echo.sh  tim2tox_client.cpp
ffi/: CMakeLists.json_lib.txt  CMakeLists.txt  callback_bridge.cpp  callback_bridge.h  dart_compat_callbacks.cpp  dart_compat_callbacks.h  dart_compat_community.cpp  dart_compat_conversation.cpp  dart_compat_friendship.cpp  dart_compat_group.cpp  dart_compat_internal.h  dart_compat_layer.cpp  dart_compat_layer.h  dart_compat_listeners.cpp  dart_compat_message.cpp  dart_compat_other.cpp  dart_compat_sdk.cpp  dart_compat_signaling.cpp  dart_compat_user.cpp  dart_compat_utils.cpp  dart_functions_list.txt  json_parser.cpp  json_parser.h  json_parser_nlohmann.cpp.example  tim2tox_ffi.cpp  tim2tox_ffi.h  update_callbacks.py
include/: V2TIMDefine.h  V2TIMGroupManagerImpl.h  V2TIMManager.h  V2TIMString.h  V2TIMStringHash.h  irc_client_api.h
source/: CMakeLists.txt  IrcClientManager.cpp  IrcClientManager.h  MergerMessageUtil.cpp  MergerMessageUtil.h  MessageReplyUtil.cpp  MessageReplyUtil.h  PathUtils.cpp  PathUtils.h  RevokeMessageUtil.cpp  RevokeMessageUtil.h  TIMResultDefine.h  ToxAVManager.cpp  ToxAVManager.h  ToxManager.cpp  ToxManager.h  ToxUtil.h  ToxUtils.h  V2TIMBuffer.cpp  V2TIMCommunityManagerImpl.cpp  V2TIMCommunityManagerImpl.h  V2TIMConversationManagerImpl.cpp  V2TIMConversationManagerImpl.h  V2TIMDataImpl.h  V2TIMDataShim.cpp  V2TIMFriendshipManagerImpl.cpp  V2TIMFriendshipManagerImpl.h  V2TIMGroupManagerImpl.cpp  V2TIMGroupManagerImpl.h  V2TIMLog.cpp  V2TIMLog.h  V2TIMManagerImpl.cpp  V2TIMManagerImpl.h  V2TIMMessageManagerImpl.cpp  V2TIMMessageManagerImpl.h  V2TIMSDKHdr.h  V2TIMSignalingManagerImpl.cpp  V2TIMSignalingManagerImpl.h  V2TIMString.cpp  V2TIMUtils.cpp  (+3 more)
source/cmake/: FindSodium.cmake  FindToxav.cmake  FindToxcore.cmake
test/: CMakeLists.txt  ToxUtilTest.cpp  V2TIMMessageTest.cpp  V2TIMStringTest.cpp
tool/: apply_sdk_patches.dart  tencent_cloud_chat_sdk.lock.json
(+38 files in other folders)
